--- a/index.html
+++ b/index.html
@@ -14,8 +14,95 @@
 </head>
 
 <body>
-    <h1>welcome to the city hall</h1>
 
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white my-3">
+            <div class="container">
+                <a class="navbar-brand city-hall" href="#">City Hall Convention Center</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link menu-bar" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menu-bar" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menu-bar" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menu-bar" href="#">Subscribe</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/banner.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>The perfect venue for your
+                                <br> next event
+                            </h1>
+                            <p class="fs-6 fw-lighter">We Work with all Budgets. No Budget is Big or Small.
+                                <br> Lets
+                                talk and
+                                compose Beautiful
+                                memories to last a lifetime.
+                            </p>
+                            <button type="button" class="btn btn-light header-button">Book Now</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/wedding.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>We plan, manage and create the <br> perfect event for you!
+                            </h1>
+                            <!-- <p></p> -->
+                            <button type="button" class="btn btn-light header-button">Book Now</button>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/wedding2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>Plan and create your own events or business meetings.
+                            </h1>
+                            <!-- <p>Some representative placeholder content for the third slide.</p> -->
+                            <button type="button" class="btn btn-light header-button">Book Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+
+        </section>
+    </header>
 
 
     <!-- bootstrap js link -->
