--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white my-3">
             <div class="container">
-                <a class="navbar-brand city-hall" href="#">City Hall Convention Center</a>
+                <a class="navbar-brand city-hall fw-bold" href="#">City Hall Convention Center</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/banner.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h1>The perfect venue for your
                                 <br> next event
                             </h1>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/wedding.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h1>We plan, manage and create the <br> perfect event for you!
                             </h1>
                             <!-- <p></p> -->
@@ -80,7 +80,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/wedding2.jpg" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-md-block">
                             <h1>Plan and create your own events or business meetings.
                             </h1>
                             <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -103,7 +103,35 @@
 
         </section>
     </header>
+    <main>
+        <section class="container mt-5">
+            <div class="row">
+                <div class="col-12 d-flex col-lg-6 col-md-6">
+                    <div>
+                        <img class="img-fluid" src="images/wedding.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 d-flex col-lg-6 col-md-6 align-items-center">
+                    <div>
+                        <h1 class="fw-bold">Our Goal</h1>
+                        <p>The primary goal of the City Hall is to make your event experience
+                            flawless, right from
+                            start to
+                            finish. We take care of everything for your event. From food to décor we take care of
+                            every
+                            little detail that will simplify your planning process and give you a complete
+                            convention
+                            experience.</p>
+                        <button type="button" class="btn btn-primary text-white header-button">Book Now <img
+                                src="/icons/arrow-forward 1.svg" alt=""></button>
+                    </div>
+                </div>
 
+
+
+            </div>
+        </section>
+    </main>
 
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
