--- a/index.html
+++ b/index.html
@@ -114,14 +114,29 @@
         <!-- our goal section  -->
         <section class="container">
             <div class="row mt-5">
+
                 <div class="col-12 d-flex col-lg-6 col-md-6">
                     <div>
                         <img class="img-fluid" src="images/wedding.png" alt="">
                     </div>
                 </div>
-                <div class="col-12 d-flex col-lg-6 col-md-6 align-items-center">
+                <div class="col-12 d-flex col-lg-6 col-md-6 align-items-center position-relative">
                     <div>
                         <h1 class="fw-bold">Our Goal</h1>
+                        <div class="toast show align-items-center top-0 end-0 position-absolute border-0" role="alert"
+                            aria-live="assertive" aria-atomic="true">
+                            <div class="d-flex">
+                                <div class="toast-body">
+                                    <img src="icons/Vector.svg" alt="">
+                                    <span class="ps-1 pt-3">20% off on next booking</span>
+
+
+                                </div>
+                                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+
                         <p>The primary goal of the City Hall is to make your event experience
                             flawless, right from
                             start to
@@ -131,7 +146,7 @@
                             convention
                             experience.</p>
                         <button type="button" class="btn btn-primary text-white header-button">Book Now <img
-                                src="/icons/arrow-forward 1.svg" alt=""></button>
+                                src="icons/arrow-forward1.svg" alt=""></button>
                     </div>
                 </div>
             </div>
@@ -139,25 +154,55 @@
 
         <!-- our package  -->
 
-
-
         <section class="container mt-5">
             <h1 class="d-flex justify-content-center package">Our Packages</h1>
             <div class="row row-cols-1 row-cols-md-3  text-center">
                 <div class="col-12 col-lg-3 col-md-6">
-                    <div class="card mb-4 rounded-3 border-0">
+                    <div class="card mb-4 rounded-3 border-0 text-start">
                         <div class=" py-3">
-                            <h1 class="my-0 fw-normal fw-bold align-text ps-3">$300</h1>
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title pricing-card-title align-text">Business fair
+                            <h3 class="card-title pricing-card-title">Business fair
                             </h3>
-                            <ul class="list-unstyled mt-3 mb-4 align-text list-group">
-                                <li class="far fa-check-circle" aria-hidden="true">10 users included</li>
-                                <li class="far fa-check-circle" aria-hidden="true">2 GB of storage</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Email support</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
+                            <h6 class="text-muted">For most businesses event
+                                like book fair, craft fair.</h6>
+                            <ul class="list-unstyled mt-3 mb-4  list-group text-muted ">
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">limited
+                                        space access</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Secuirty
+                                        facility</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">event
+                                        support</span>
+                                </li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2"> Decoration
+                                        design</span>
+                                </li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Per day
+                                        bill</span></li>
+                            </ul>
+                            <button type="button"
+                                class="w-100 btn btn-lg btn-outline-primary rounded-pill px-md-0">Choose a
+                                plan</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-3 col-md-6 ">
+                    <div class="card mb-4 rounded-3 border-0 text-start ">
+                        <div class=" py-3">
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title pricing-card-title ">wedding basic
+                            </h3>
+                            <h6 class="text-muted">For weddings with basic plan
+                                and limited item</h6>
+                            <ul class="list-unstyled mt-3 mb-4 align-text list-group text-muted">
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Full space access</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Food arrangement</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">mangement support</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Decoration design</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Billed as shift</li>
                             </ul>
                             <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-pill">Choose a
                                 plan</button>
@@ -165,43 +210,24 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3 col-md-6">
-                    <div class="card mb-4 rounded-3 border-0">
-                        <div class=" py-3">
-                            <h1 class="my-0 fw-normal fw-bold align-text ps-3">$300</h1>
-                        </div>
-                        <div class="card-body">
-                            <h3 class="card-title pricing-card-title align-text">wedding basic
-                            </h3>
-                            <ul class="list-unstyled mt-3 mb-4 align-text list-group">
-                                <li class="far fa-check-circle" aria-hidden="true">10 users included</li>
-                                <li class="far fa-check-circle" aria-hidden="true">2 GB of storage</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Email support</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
-                            </ul>
-                            <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-pill">Choose a
-                                plan</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 col-md-6">
-                    <div class="card mb-4 bg-primary text-white hot-card pt-4 pb-2 border-0">
+                    <div class="card mb-4 text-white hot-card pt-3 pb-1 border-0 text-start">
                         <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                             HOT
                             <span class="visually-hidden">unread messages</span>
                         </span>
                         <div class=" py-3">
-                            <h1 class="my-0 fw-normal fw-bold align-text ps-3">$300</h1>
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title pricing-card-title align-text">Wedding plus
+                            <h3 class="card-title pricing-card-title ">Wedding plus
                             </h3>
-                            <ul class="list-unstyled mt-3 mb-4 align-text list-group">
-                                <li class="far fa-check-circle" aria-hidden="true">10 users included</li>
-                                <li class="far fa-check-circle" aria-hidden="true">2 GB of storage</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Email support</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
-                                <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
+                            <h6>For most weddings with premium plans</h6>
+                            <ul class="list-unstyled mt-3 mb-4 align-text list-group ">
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Full space access</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Dedicated team</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Buffet food</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">premium Decoration</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">pay as plan</li>
                             </ul>
                             <button type="button" class="w-100 btn btn-lg btn-light text-primary rounded-pill">Choose a
                                 plan</button>
@@ -209,46 +235,106 @@
                     </div>
                 </div>
 
-                <div class="card mb-4 rounded-3 shadow-sm border-primary">
-                    <div class=" py-3 text-white bg-primary border-primary">
-                        <h4 class="my-0 fw-normal">$1200</h4>
-                    </div>
-                    <div class="card-body">
-                        <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small>
-                        </h1>
-                        <ul class="list-unstyled mt-3 mb-4">
-                            <li>30 users included</li>
-                            <li>15 GB of storage</li>
-                            <li>Phone and email support</li>
-                            <li>Help center access</li>
-                        </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-                    </div>
-                </div>
-            </div> -->
-            <div class="col-12 col-lg-3 col-md-6">
-                <div class="card mb-4 rounded-3 border-0">
-                    <div class=" py-3">
-                        <h1 class="my-0 fw-normal fw-bold align-text ps-3">$300</h1>
-                    </div>
-                    <div class="card-body">
-                        <h3 class="card-title pricing-card-title align-text">Corporate event
-                        </h3>
-                        <ul class="list-unstyled mt-3 mb-4 align-text list-group">
-                            <li class="far fa-check-circle" aria-hidden="true">10 users included</li>
-                            <li class="far fa-check-circle" aria-hidden="true">2 GB of storage</li>
-                            <li class="far fa-check-circle" aria-hidden="true">Email support</li>
-                            <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
-                            <li class="far fa-check-circle" aria-hidden="true">Help center access</li>
-                        </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-pill">Choose a
-                            plan</button>
+                <div class="col-12 col-lg-3 col-md-6">
+                    <div class="card mb-4 rounded-3 border-0 text-start">
+                        <div class=" py-3">
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title pricing-card-title ">Corporate event
+                            </h3>
+                            <h6 class="text-muted">For most corporate business
+                                events</h6>
+                            <ul class="list-unstyled mt-3 mb-4 align-text list-group text-muted">
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Full space access</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Dedicated team</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Buffet food</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">premium Decoration</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true">pay as plan</li>
+                            </ul>
+                            <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-pill">Choose a
+                                plan</button>
+                        </div>
                     </div>
                 </div>
             </div>
+
+        </section>
+
+        <!-- faqs   -->
+        <section class="container">
+            <h1 class="d-flex justify-content-center mb-5 mt-5">Frequently Asked Questions</h1>
+            <div class="row">
+                <div class="col-lg-6 mx-auto">
+                    <img class="img-fluid " src="images/people.png" alt="">
+                </div>
+                <div class="col-lg-6 my-auto">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
+
+
 
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
