--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 <div class="col-12 d-flex col-lg-6 col-md-6 align-items-center position-relative">
                     <div>
                         <h1 class="fw-bold">Our Goal</h1>
-                        <div class="toast show align-items-center top-0 end-0 position-absolute border-0" role="alert"
-                            aria-live="assertive" aria-atomic="true">
+                        <div class="toast show align-items-center top-0 end-0 position-absolute border-0 border-start border-primary border-5"
+                            role="alert" aria-live="assertive" aria-atomic="true">
                             <div class="d-flex">
                                 <div class="toast-body">
                                     <img src="icons/Vector.svg" alt="">
@@ -261,6 +261,58 @@
 
         </section>
 
+        <section class="mt-5 mb-5">
+            <div class="container">
+                <h1 class="d-flex justify-content-center">Help Us to Reach You</h1>
+                <form class="row g-3">
+                    <div class="col-md-6">
+                        <label for="inputEmail4" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="inputPassword4" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="inputPassword4">
+                    </div>
+                    <div class="col-12">
+                        <label for="inputAddress" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="col-12">
+                        <label for="inputAddress2" class="form-label">Address 2</label>
+                        <input type="text" class="form-control" id="inputAddress2"
+                            placeholder="Apartment, studio, or floor">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="inputCity" class="form-label">Phone Number</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="col-md-4">
+                        <label for="inputState" class="form-label">City</label>
+                        <select id="inputState" class="form-select">
+                            <option selected>Choose...</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="inputZip" class="form-label">State</label>
+                        <input type="text" class="form-control" id="inputZip">
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="gridCheck">
+                            <label class="form-check-label" for="gridCheck">
+                                Confirm all
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="button" class="btn btn-primary text-white header-button">Submit<img
+                                src="icons/arrow-forward1.svg" alt=""></button>
+                    </div>
+                </form>
+            </div>
+        </section>
+
         <!-- faqs   -->
         <section class="container">
             <h1 class="d-flex justify-content-center mb-5 mt-5">Frequently Asked Questions</h1>
@@ -332,7 +384,22 @@
 
             </div>
         </section>
+
+
     </main>
+
+    <footer class="bg-dark text-light mt-5">
+        <div class="d-flex justify-content-around align-items-center">
+            <div class="text-light d-flex pt-5 mt-5 ">
+                <p>© 2022 Red Love Convention Center. All rights reserved</p>
+            </div>
+            <div class="mt-5 order-sm-1">
+                <p class="text-light">Get the App</p>
+                <img src="icons/Layer2.png" alt=""><br><br>
+                <img src="icons/appstore.png" alt="">
+            </div>
+        </div>
+    </footer>
 
 
 
