--- a/index.html
+++ b/index.html
@@ -74,20 +74,21 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/wedding.jpg" class="d-block w-100" alt="...">
+                        <img src="images/business.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h1 class="perfect">We plan, manage and create the perfect event for you!
                             </h1>
-                            <!-- <p></p> -->
-                            <button type="button" class="btn btn-light header-button">Book Now</button>
+
+                            <a target="_blank" class="btn btn-light header-button"
+                                href="https://www.linkedin.com/in/md-jahid-3598b6229/" role="button">Book Now</a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/wedding2.jpg" class="d-block w-100" alt="...">
+                        <img src="images/light.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption">
                             <h1 class="perfect">Plan and create your own events or business meetings.
                             </h1>
-                            <!-- <p>Some representative placeholder content for the third slide.</p> -->
+
                             <button type="button" class="btn btn-light header-button">Book Now</button>
                         </div>
                     </div>
@@ -154,8 +155,8 @@
 
         <!-- our package  -->
 
-        <section class="container mt-5">
-            <h1 class="d-flex justify-content-center package">Our Packages</h1>
+        <section class="container">
+            <h1 class="d-flex justify-content-center package fw-bold">Our Packages</h1>
             <div class="row row-cols-1 row-cols-md-3  text-center">
                 <div class="col-12 col-lg-3 col-md-6">
                     <div class="card mb-4 rounded-3 border-0 text-start">
@@ -190,19 +191,24 @@
                 <div class="col-12 col-lg-3 col-md-6 ">
                     <div class="card mb-4 rounded-3 border-0 text-start ">
                         <div class=" py-3">
-                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$500</h1>
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title pricing-card-title ">wedding basic
+                            <h3 class="card-title pricing-card-title ">Wedding Basic
                             </h3>
                             <h6 class="text-muted">For weddings with basic plan
                                 and limited item</h6>
                             <ul class="list-unstyled mt-3 mb-4 align-text list-group text-muted">
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Full space access</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Food arrangement</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">mangement support</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Decoration design</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Billed as shift</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Full space
+                                        access</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Food
+                                        arrangement</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">mangement
+                                        support</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Decoration
+                                        design</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Billed as
+                                        shift</span></li>
                             </ul>
                             <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-pill">Choose a
                                 plan</button>
@@ -216,18 +222,23 @@
                             <span class="visually-hidden">unread messages</span>
                         </span>
                         <div class=" py-3">
-                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$800</h1>
                         </div>
                         <div class="card-body">
                             <h3 class="card-title pricing-card-title ">Wedding plus
                             </h3>
                             <h6>For most weddings with premium plans</h6>
                             <ul class="list-unstyled mt-3 mb-4 align-text list-group ">
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Full space access</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Dedicated team</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Buffet food</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">premium Decoration</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">pay as plan</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Full space
+                                        access</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Dedicated
+                                        team</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Buffet
+                                        food</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">premium
+                                        Decoration</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2"></span>pay
+                                    as plan</li>
                             </ul>
                             <button type="button" class="w-100 btn btn-lg btn-light text-primary rounded-pill">Choose a
                                 plan</button>
@@ -238,7 +249,7 @@
                 <div class="col-12 col-lg-3 col-md-6">
                     <div class="card mb-4 rounded-3 border-0 text-start">
                         <div class=" py-3">
-                            <h1 class="my-0 fw-normal fw-bold ps-3">$300</h1>
+                            <h1 class="my-0 fw-normal fw-bold ps-3">$1200</h1>
                         </div>
                         <div class="card-body">
                             <h3 class="card-title pricing-card-title ">Corporate event
@@ -246,11 +257,16 @@
                             <h6 class="text-muted">For most corporate business
                                 events</h6>
                             <ul class="list-unstyled mt-3 mb-4 align-text list-group text-muted">
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Full space access</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Dedicated team</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">Buffet food</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">premium Decoration</li>
-                                <li class="far fa-check-circle lh-lg" aria-hidden="true">pay as plan</li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Full space
+                                        access</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Dedicated
+                                        team</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">Buffet
+                                        food</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">premium
+                                        Decoration</span></li>
+                                <li class="far fa-check-circle lh-lg" aria-hidden="true"><span class="ps-2">pay as
+                                        plan</span></li>
                             </ul>
                             <button type="button" class="w-100 btn btn-lg btn-outline-primary rounded-pill">Choose a
                                 plan</button>
@@ -261,9 +277,11 @@
 
         </section>
 
+        <!-- bonus part   -->
+
         <section class="mt-5 mb-5">
             <div class="container">
-                <h1 class="d-flex justify-content-center">Help Us to Reach You</h1>
+                <h1 class="d-flex justify-content-center fw-bold mb-5">Help Us to Reach You</h1>
                 <form class="row g-3">
                     <div class="col-md-6">
                         <label for="inputEmail4" class="form-label">Email</label>
@@ -315,7 +333,7 @@
 
         <!-- faqs   -->
         <section class="container">
-            <h1 class="d-flex justify-content-center mb-5 mt-5">Frequently Asked Questions</h1>
+            <h1 class="d-flex justify-content-center mb-5 mt-5 fw-bold">Frequently Asked Questions</h1>
             <div class="row ">
                 <div class="col-lg-6">
                     <img class="img-fluid " src="images/people.png" alt="">
@@ -364,26 +382,26 @@
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <p>Refund/cancellation policies applicable in the following conditions: a) In case,
+                                        the buyer cancels the order online before the product has been shipped, the
+                                        entire order amount will be refunded. ... Total order amount after deduction of
+                                        shipment and handling charges will be refunded.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                         <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
+                            <h2 class="accordion-header" id="headingFour">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                     <strong>How do you keep budgets on track?</strong>
                                 </button>
                             </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <p></p>
+                                    <p>We Work with all Budgets. No Budget is Big or Small.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -396,6 +414,7 @@
 
     </main>
 
+    <!-- footer start  -->
     <footer class="bg-dark text-light mt-5">
         <div class="d-flex flex-column-reverse flex-md-row justify-content-around align-items-center">
             <div class="text-light pt-5 mt-5 ">
@@ -403,8 +422,14 @@
             </div>
             <div class="mt-5 order-sm-1">
                 <p class="text-light">Get the App</p>
-                <img src="icons/Layer2.png" alt=""><br><br>
-                <img src="icons/appstore.png" alt="">
+
+                <a href="https://play.google.com/store/apps/details?id=com.rhmsoft.code&hl=en&gl=US">
+                    <img src="icons/Layer2.png" alt=""><br><br>
+                </a>
+                <a href="https://apps.apple.com/us/app/programming-hero-coding-fun/id1478201849">
+                    <img src="icons/appstore.png" alt="">
+                </a>
+
             </div>
         </div>
     </footer>
